# gpc_rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  agents.md
.codex/skills/: _index.md  burn-patterns.md  debugging.md  model-porting.md  testing.md
docs/: demo-explained.md
gpc-cli/: Cargo.toml
gpc-cli/src/: main.rs
gpc-cli/src/commands/: benchmark.rs  checkpoint.rs  demo.rs  demo_pipeline.rs  demo_tui.rs  eval.rs  init_config.rs  mod.rs  reporting.rs  train.rs
gpc-compat/: Cargo.toml
gpc-compat/src/: checkpoint.rs  lib.rs  onnx.rs
gpc-core/: Cargo.toml
gpc-core/src/: config.rs  error.rs  lib.rs  noise.rs  tensor_utils.rs  traits.rs  types.rs
gpc-demo-server/: Cargo.toml
gpc-demo-server/src/: arena.rs  dataset.rs  main.rs  types.rs
gpc-eval/: Cargo.toml
gpc-eval/src/: gpc_opt.rs  gpc_rank.rs  lib.rs
gpc-policy/: Cargo.toml
gpc-policy/src/: lib.rs  network.rs  policy.rs
gpc-train/: Cargo.toml
gpc-train/src/: data.rs  lib.rs  optimization.rs  policy_trainer.rs  world_model_trainer.rs
gpc-wasm/: Cargo.toml
gpc-wasm/src/: arena.rs  lib.rs  types.rs
gpc-world/: Cargo.toml
gpc-world/src/: dynamics.rs  lib.rs  reward.rs  world_model.rs
web-demo/: README.md  index.html  package-lock.json  package.json
web-demo/src/: App.tsx  api.ts  index.css  plannerClient.ts  types.ts
web-demo/src/components/: RobotStage.tsx  SignalChart.tsx
web-demo/src/wasm/pkg/: gpc_wasm.d.ts  gpc_wasm.js  gpc_wasm_bg.js  gpc_wasm_bg.wasm  gpc_wasm_bg.wasm.d.ts  package.json
web-demo/src/workers/: planner.worker.ts
