[workspace]
members = [
    "gpc-core",
    "gpc-policy",
    "gpc-world",
    "gpc-eval",
    "gpc-train",
    "gpc-compat",
    "gpc-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/AbdelStark/gpc_rs"

[workspace.dependencies]
# ML frameworks
burn = { version = "0.16", features = ["train", "ndarray", "wgpu"] }
burn-ndarray = "0.16"
burn-wgpu = "0.16"
tract-onnx = "0.21"
tract-core = "0.21"

# Core utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
ndarray = "0.16"
rand = "0.8"
tokio = { version = "1", features = ["full"] }

# Testing
approx = "0.5"
proptest = "1"
