[workspace]
members = [
    "gpc-core",
    "gpc-policy",
    "gpc-world",
    "gpc-eval",
    "gpc-train",
    "gpc-compat",
    "gpc-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/AbdelStark/gpc_rs"

[workspace.dependencies]
# Internal crates
gpc-core = { version = "0.1.0", path = "gpc-core", package = "world-models-gpc-core" }
gpc-policy = { version = "0.1.0", path = "gpc-policy", package = "world-models-gpc-policy" }
gpc-world = { version = "0.1.0", path = "gpc-world", package = "world-models-gpc-world" }
gpc-eval = { version = "0.1.0", path = "gpc-eval", package = "world-models-gpc-eval" }
gpc-train = { version = "0.1.0", path = "gpc-train", package = "world-models-gpc-train" }
gpc-compat = { version = "0.1.0", path = "gpc-compat", package = "world-models-gpc-compat" }

# ML frameworks
burn = { version = "0.20.1", features = ["train", "ndarray", "wgpu"] }
burn-ndarray = "0.20.1"
burn-wgpu = "0.20.1"
tract-onnx = "0.21"
tract-core = "0.21"

# Core utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
ndarray = "0.16"
rand = "0.8"
tokio = { version = "1", features = ["full"] }

# Numeric utilities
num-traits = "0.2"

# Testing
approx = "0.5"
proptest = "1"
