[package]
name = "world-models-gpc-cli"
description = "CLI interface for GPC operations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gpc"
path = "src/main.rs"

[dependencies]
gpc-core = { workspace = true }
gpc-policy = { workspace = true }
gpc-world = { workspace = true }
gpc-eval = { workspace = true }
gpc-train = { workspace = true }
gpc-compat = { workspace = true }
burn = { workspace = true }
burn-ndarray = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
