[package]
name = "world-models-gpc-compat"
description = "Model interoperability and checkpoint loading for GPC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "gpc_compat"

[dependencies]
gpc-core = { workspace = true }
gpc-policy = { workspace = true }
gpc-world = { workspace = true }
burn = { workspace = true }
tract-onnx = { workspace = true }
tract-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
tempfile = "3"
