[package]
name = "world-models-gpc-core"
description = "Core traits, tensor wrappers, and shared abstractions for GPC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "gpc_core"

[dependencies]
burn = { workspace = true }
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
burn-ndarray = { workspace = true }
proptest = { workspace = true }
