[package]
name = "gpc-demo-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gpc-demo-server"
path = "src/main.rs"

[dependencies]
gpc-core = { workspace = true }
gpc-policy = { workspace = true }
gpc-world = { workspace = true }
burn = { workspace = true }
burn-ndarray = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.8"
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
