[package]
name = "world-models-gpc-train"
description = "Training orchestration for GPC models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "gpc_train"

[dependencies]
gpc-core = { workspace = true }
gpc-policy = { workspace = true }
gpc-world = { workspace = true }
burn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
