[package]
name = "gpc-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gpc-core = { workspace = true }
gpc-policy = { workspace = true }
gpc-world = { workspace = true }
burn = { workspace = true }
burn-ndarray = { workspace = true }
console_error_panic_hook = "0.1"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
getrandom02 = { package = "getrandom", version = "0.2.17", features = ["js"] }
rand = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-time = "1"
